Blender 2.8 crash when select Dopesheet->Grease Pencil #51578

Closed
opened 2017-05-21 18:52:59 +02:00 by Antonio Vazquez · 5 comments

Blender crash as soon as you select the dopesheet grease pencil mode.

Windows 10 64 bits
Last daily 2.8 build VS2015

To reproduce:

  1. Open default scene
  2. Open dopesheet
  3. Change to grease pencil
  4. Crash

I have been doing some debug and the error is in rna_SpaceDopeSheetEditor_mode_update() function when the *SceneLayer sl = CTX_data_scene_layer(C); sentence is run.

It looks this function call

ctx_data_get()

and fails when run:

ret = cb(C, member, result);

I'm not sure how is working this context function, so @dfelinto could you take a look when you have some time?

Blender crash as soon as you select the dopesheet grease pencil mode. Windows 10 64 bits Last daily 2.8 build VS2015 To reproduce: 1) Open default scene 2) Open dopesheet 3) Change to grease pencil 4) Crash I have been doing some debug and the error is in **rna_SpaceDopeSheetEditor_mode_update()** function when the **SceneLayer *sl = CTX_data_scene_layer(C);** sentence is run. It looks this function call ``` ctx_data_get() ``` and fails when run: ``` ret = cb(C, member, result); ``` I'm not sure how is working this context function, so @dfelinto could you take a look when you have some time?
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscribers: @dfelinto, @antoniov

Added subscribers: @dfelinto, @antoniov
Author
Member

Added subscribers: @pepe-school-land, @mendio

Added subscribers: @pepe-school-land, @mendio

This issue was referenced by c0202c0d33

This issue was referenced by c0202c0d336d4e7bb6cfac0c7ecc8acaf0c426ae

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#51578
No description provided.