Fix T51578: Blender 2.8 crash when select Dopesheet->Grease Pencil